Add java11 support